Adicionando fotos e descricao

--- a/desenvolvedores.html
+++ b/desenvolvedores.html
@@ -27,7 +27,7 @@
         <img class="imagem-desenvolvedor" src="assets/foto-augusto.png">
         <p>Luís Augusto</p>
         </div>
-        <p class="descricao-desenvolvedor">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto fuga corporis perferendis dolore vero eum! Harum qui sequi adipisci quos obcaecati recusandae magnam excepturi ullam possimus, quam hic, eum nam.</p>
+        <p class="descricao-desenvolvedor">Sou um entusiasta da tecnologia em busca de me tornar um desenvolvedor full-stack. Estou mergulhando de cabeça no aprendizado de linguagens e ferramentas como HTML, CSS, JavaScript e Kotlin, sempre em busca de construir soluções que tornem a vida das pessoas mais fácil e agradável.</p>
       </div>
       <div class="desenvolvedor">
         <div class="info-desenvolvedor">
@@ -38,10 +38,10 @@
       </div>
       <div class="desenvolvedor">
         <div class="info-desenvolvedor">
-        <img class="imagem-desenvolvedor" src="assets/foto-miguel.webp">
+        <img class="imagem-desenvolvedor" src="assets/foto-miguel.jpg">
         <p>Luis Miguel</p>
         </div>
-        <p class="descricao-desenvolvedor">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto fuga corporis perferendis dolore vero eum! Harum qui sequi adipisci quos obcaecati recusandae magnam excepturi ullam possimus, quam hic, eum nam.</p>
+        <p class="descricao-desenvolvedor">Sou um desenvolvedor web apaixonado por tecnologia e inovação. Trabalho para criar soluções eficientes, intuitivas e acessíveis, sempre buscando aprimorar minhas habilidades e aplicar as melhores práticas no desenvolvimento.</p>
         </div>
     </section>
   </main>
