--- a/desenvolvedores.html
+++ b/desenvolvedores.html
@@ -34,7 +34,7 @@
         <img class="imagem-desenvolvedor" src="assets/foto-rikelmy.webp">
         <p>José Rikelmy</p>
         </div>
-        <p class="descricao-desenvolvedor">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto fuga corporis perferendis dolore vero eum! Harum qui sequi adipisci quos obcaecati recusandae magnam excepturi ullam possimus, quam hic, eum nam.</p>
+        <p class="descricao-desenvolvedor">Sou tão feio que pareço um saruê molhado e quero ser bandido.</p>
       </div>
       <div class="desenvolvedor">
         <div class="info-desenvolvedor">
