--- a/desenvolvedores.html
+++ b/desenvolvedores.html
@@ -34,7 +34,7 @@
         <img class="imagem-desenvolvedor" src="assets/foto-rikelmy.webp">
         <p>José Rikelmy</p>
         </div>
-        <p class="descricao-desenvolvedor">Sou tão feio que pareço um saruê molhado e quero ser bandido.</p>
+        <p class="descricao-desenvolvedor">Sou uma pessoa apaixonada pela arte de capturar momentos e emoções por meio das lentes. Com um olhar curioso e atento aos detalhes, sonha em se tornar fotógrafo no futuro, buscando explorar a beleza do mundo ao seu redor e contar histórias únicas através de suas imagens.</p>
       </div>
       <div class="desenvolvedor">
         <div class="info-desenvolvedor">
