--- a/desenvolvedores.html
+++ b/desenvolvedores.html
@@ -15,7 +15,7 @@
             <p class="title">Timeflow</p>
         </div>
         <ul class="nav-itens">
-            <a id="home" href="index.html">Home</a>
+            <a id="home" href="home.html">Home</a>
             <a id="desenvolvedores" href="desenvolvedores.html">Desenvolvedores</a>
         </ul>
     </nav>
@@ -31,7 +31,7 @@
       </div>
       <div class="desenvolvedor">
         <div class="info-desenvolvedor">
-        <img class="imagem-desenvolvedor" src="assets/foto-rikelmy.webp">
+        <img class="imagem-desenvolvedor" src="assets/foto-rikelmy.jpg">
         <p>José Rikelmy</p>
         </div>
         <p class="descricao-desenvolvedor">Sou uma pessoa apaixonada pela arte de capturar momentos e emoções por meio das lentes. Com um olhar curioso e atento aos detalhes, sonha em se tornar fotógrafo no futuro, buscando explorar a beleza do mundo ao seu redor e contar histórias únicas através de suas imagens.</p>
